--- a/CSP/water/index.html
+++ b/CSP/water/index.html
@@ -168,8 +168,8 @@
 				<div id="pmodalbody" class="modal-body">
 					<h5 class="text-"></h5>
           <table bgcolor="#2d2d30" class="table table-inverse" id="tblGrid">
-            <tbody>
-              <tr><td>Temperature</td>
+            <tbody id="redOK">
+ <!--             <tr><td>Temperature</td>
                 <td class="text-right">45001</td>
               </tr>
               <tr><td>Pressure</td>
@@ -180,7 +180,7 @@
               </tr>
 				<tr><td>Water Index</td>
                 <td class="text-right">45001</td>
-              </tr>
+              </tr>-->
             </tbody>
           </table>
 				</div>
