--- a/CSP/water/index.html
+++ b/CSP/water/index.html
@@ -21,7 +21,8 @@
 				  <span class="icon-bar"></span>
 				  <span class="icon-bar"></span>                        
 				</button>
-      			<a class="navbar-brand" href="#MainName">Clean Water</a>
+      			 <a class="navbar-brand" href="#MainName"><img src="./img/logo.png" height="25" width="25"></a>
+      			 <a class="navbar-brand" href="#MainName">Clean Water</a>
     		</div>
     		<div>
 				<div class="collapse navbar-collapse" id="myNavbar">
@@ -127,15 +128,21 @@
 	</div>
 
 <div id ="section2" class="container-fluid">
-	<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-  		<h3 style="text-align:center;">Clean Water Is Near You</h3>
-  			<p>
-				<b>Choose The Location to Find Fresh Water Resource Around Your Location </b> 
-				Insert Content Here.
-			</p>
-	</div>
-	<div class="bgimg-2">
-	</div>
+    <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+         <h3 style="text-align:center;">Clean Water Is Near You</h3>
+             <p style="text-align:center;">
+                <b>Choose The Location to Find Water Resource Rating Around Selected Location </b>
+            </p>
+        <ol style="text-align:center;">
+            <p>Please select the required loacation on the Map by clicking on it. </p>
+            <p>If the required location is not yet displayed, click again to zoom in.</p>
+            <p>To select final location just click on the OK button.</p>
+            <p>If you can't find your location just write it in the text field provided.</p>
+            <p>Please leave your water details.</p>
+        </ol>
+    </div>
+    <div class="bgimg-2">
+    </div>
 </div>
 
 <div id ="section3" class="container-fluid">	
@@ -193,7 +200,7 @@
 <div id ="section4" class="container-fluid">
 <div class="bgimg-3">
   <div class="caption">
-    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SCROLL UP</span>
+    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;"></span>
   </div>
 </div>
 
@@ -205,7 +212,7 @@
 	</div>
 <div class="bgimg-1">
   <div class="caption">
-    <span class="border">COOL!</span>
+    <span class="border">DRINK CLEAN WATER LEAD A HEALTHY LIFE!</span>
   </div>
 </div>
   
